<resources>
    <string name="app_name">上海第二工业大学图书入库系统</string>
    <string name="all_epc_sum">标签总数:</string>
    <string name="all_epc_count">盘存总次数:</string>
    <string name="start_inventory_epc">扫描开始</string>
    <string name="export_xls">保存数据</string>
    <string name="clear">清空数据</string>
    <string name="multi_mode">多标签模式</string>
    <string name="is_tid">TID</string>
    <string name="is_play">声音</string>
    <string name="connection_failed">模块连接失败，请退出应用，重新进入。</string>
    <string name="stop_inventory_epc">停止盘存EPC</string>




    <string name="inituhffail">初始化失败！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>